# SnapTalk-messenger-server

./: .gitignore  CMakeLists.txt  LICENSE  PROTO_COMPILE.txt  README copy.md  README.md  messenger_service  pgProject.groupproj  pgProject.groupproj.local
Client/: Client.cbproj  Client.cpp  uCommon.hpp  uCommon.pas  udmData.cpp  udmData.dfm  udmData.h  udssmRemoteDataClient.cpp  udssmRemoteDataClient.h  ufChat.cpp  ufChat.dfm  ufChat.h  ufLogin.cpp  ufLogin.dfm  ufLogin.h  ufMain.cpp  ufMain.dfm  ufMain.h  ufUser.cpp  ufUser.dfm  ufUser.h  ufUserEditor.cpp  ufUserEditor.dfm  ufUserEditor.h  ufUserInfoEditor.cpp  ufUserInfoEditor.dfm  ufUserInfoEditor.h  ufUserList.cpp  ufUserList.dfm  ufUserList.h
Client/Lib/: midas.lib
Client/Win32/Release/: Settings.ini
Client/__history/: udmData.dfm.~1~  udmData.h.~1~
Server/: Base.mdb  Server.cbproj  Server.cpp  uConnectionInfo.cpp  uConnectionInfo.h  uConnectionList.cpp  uConnectionList.h  udmServer.cpp  udmServer.dfm  udmServer.h  udssmRemoteData.cpp  udssmRemoteData.dfm  udssmRemoteData.h  ufMain.cpp  ufMain.dfm  ufMain.h
Server/Win32/Release/: Base.ldb  Base.mdb
docs/: LICENSE  README.md
sourse/: messenger.proto
sourse/proto/: messenger.proto
src/api/: messenger.grpc.pb.cc  messenger.grpc.pb.h  messenger.pb.cc  messenger.pb.h
src/api/protos/: messenger.proto
src/core/: db.txt  messenger_service.cpp
